<resources>
    <string name="app_name">DBelenski Register and Login</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="cool_mage_pointing_to_the_register_button">Cool Mage pointing to the register button</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="your_birthday">Your Birthday</string>
    <string name="not_yet_a_member">Not yet a member?</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="home_screen_background">Home screen background</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
